Ex.3 + styles for form  - in form label under input css

--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -10,16 +10,16 @@
     <p><a href="index.html">Go back</a></p>
 
     <form class="form">
-      <label>
-        First delay (ms)
+      <label class="label-input">
+        <span class="text-input"> First delay (ms) </span>
         <input type="number" name="delay" required />
       </label>
-      <label>
-        Delay step (ms)
+      <label class="label-input">
+        <span class="text-input"> Delay step (ms)</span>
         <input type="number" name="step" required />
       </label>
-      <label>
-        Amount
+      <label class="label-input">
+        <span class="text-input"> Amount</span>
         <input type="number" name="amount" required />
       </label>
       <button type="submit">Create promises</button>
